feat-app: add `Welcome` page

--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      type="module"
+      src="https://unpkg.com/@splinetool/viewer@0.9.411/build/spline-viewer.js"
+    ></script>
     <title>examor | self-improvement</title>
   </head>
 
